# concrete

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  Concrete.lean  FAQ.md  Main.lean  Makefile  PipelineTest.lean  README.md  ROADMAP.md  arrays  borrow  chars  codecov.yml  db.sql  direct_module_use  flake.nix  getting_started.html  hello_world_array  hello_world_hacky  impl_block_mut  impl_block_mut.c  index.html  installation.html  lake-manifest.json  lakefile.toml  malloc  notes.txt  opaque_vec  print.html  program.con  refs  run_tests.sh  rust-toolchain.toml  searchindex.js  searchindex.json  shell.nix  simple.con.ir  test.sql  (+13 more)
.github/: codecov.yml
.github/scripts/: publish_loc.sh
.github/workflows/: book.yml  ci.yml  daily_loc.yml  lean_action_ci.yml  pr_loc.yml
Concrete/: AST.lean  Backend.lean  BuiltinSigs.lean  Check.lean  CompilerLedger.lean  Core.lean  CoreCanonicalize.lean  CoreCheck.lean  DebugBundle.lean  Diagnostic.lean  Elab.lean  EmitBuiltins.lean  EmitLLVM.lean  EmitSSA.lean  FileSummary.lean  Format.lean  Interp.lean  Intrinsic.lean  Layout.lean  Lexer.lean  Lower.lean  Mono.lean  ObligationCore.lean  Parser.lean  Pipeline.lean  PipelineTest.lean  Policy.lean  Profile.lean  Project.lean  Proof.lean  ProofCore.lean  ProofKit.lean  ProofSoundness.lean  Reduce.lean  Report.lean  Resolve.lean  SSA.lean  SSACleanup.lean  SSAVerify.lean  Sha256Refine.lean  (+4 more)
Concrete/Backend/: Backend.lean  EmitBuiltins.lean  EmitLLVM.lean  EmitSSA.lean  LLVM.lean
Concrete/Check/: Check.lean  CheckError.lean  CheckHelpers.lean  CoreCheck.lean  Layout.lean  Policy.lean  Verify.lean
Concrete/Elab/: Core.lean  CoreCanonicalize.lean  Elab.lean  Identified.lean  Typed.lean
Concrete/Frontend/: AST.lean  Format.lean  Lexer.lean  Parser.lean
Concrete/IR/: Lower.lean  Mono.lean  SSA.lean  SSACleanup.lean  SSAVerify.lean
Concrete/Interp/: Interp.lean
Concrete/Pipeline/: Pipeline.lean  PipelineTest.lean
Concrete/Proof/: ObligationCore.lean  Proof.lean  ProofCore.lean  ProofSoundness.lean
Concrete/ProofKit/: Arith.lean  (+6 more)
ast/: Cargo.toml
bench/: .gitignore  bench.c  bench.sh  factorial.con  factorial.rs  factorial_if.con  factorial_if.rs  fib.con  fib.rs
crates/concrete_check/: Cargo.toml
crates/concrete_check/src/: ast_helper.rs  lib.rs  linearity_check.rs
crates/concrete_check/src/linearity_check/: errors.rs
crates/concrete_codegen_mlir/: Cargo.toml  build.rs
crates/concrete_codegen_mlir/src/: codegen.rs  context.rs  error.rs  errors.rs  lib.rs  linker.rs  module.rs  pass_manager.rs  scope_context.rs  wrappers.cpp
crates/concrete_driver/: Cargo.toml  README.md
crates/concrete_driver/src/: config.rs  db.rs  lib.rs  linker.rs
crates/concrete_driver/tests/: checks.rs  common.rs  examples.rs  programs.rs
crates/concrete_driver/tests/invalid_programs/: assign_unexpected_type.con  call_param_count_mismatch.con  import1.con  invalid_borrow_mut.con  refmut.con
crates/concrete_ir/: Cargo.toml
crates/concrete_ir/src/: common.rs  lib.rs  lowering.rs
crates/concrete_ir/src/lowering/: common.rs  errors.rs  prepass.rs
crates/concrete_parser/: Cargo.toml
crates/concrete_parser/src/: db.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  tokens.rs
docs/: ABI.md  ABI_LAYOUT.md  ALIGNMENT_FACTS.md  ANTI_FEATURES.md  ARCHITECTURE.md  ARITHMETIC_POLICY.md  ASSUMPTION_FILES.md  AUTHORING_WALKTHROUGH.md  AXIOMS.md  BUG_BUNDLE.md  BYTE_CURSOR_API.md  BYTE_VIEW.md  CALLABLE_VALUES_AND_CAPABILITIES.md  CAPABILITY_FACTS.md  CLAIMS_TODAY.md  CLAIM_TAXONOMY.md  COMPILER_API.md  COMPILER_BOUNDARY.md  COMPILER_PIPELINE.md  COMPILER_PIPELINE_RESEARCH.md  CONSTRUCTION_RIGHTS.md  CONSTRUCTOR_COVERAGE.md  CONST_GENERICS_V1.md  CONTRACTS_AND_VCS.md  CONTRACTS_GUIDE.md  DECISIONS.md  DEFER.md  DESIGN_POLICY.md  DETERMINISM.md  DETERMINISTIC_SIMULATION.md  DIAGNOSTICS.md  DIAGNOSTIC_UX.md  EFFECT_PROOF_BOUNDARIES.md  ERROR_CONVENTIONS.md  ERROR_HANDLING_DESIGN.md  EVIDENCE_CLASSES.md  EXAMPLE_INVENTORY.md  EXAMPLE_LIFECYCLE.md  EXAMPLE_NO_DUPLICATES.md  EXECUTION_MODEL.md  (+102 more)
examples/: README.md  aabb.con  arrays.con  assoc_method.con  binary.con  borrow.con  casts.con  chars.con  check_errors.con  complex.con  constants.con  direct_module_use.con  enum.con  factorial.con  factorial_if.con  fib_if.con  floats.con  for.con  for_loop.con  for_loop_var.con  for_while.con  generic_enum_impl.con  generic_struct.con  generics_basic.con  hello_world.con  hello_world_array.con  hello_world_hacky.con  if_if_false.con  if_with_literals.con  import.con  linearExample01.con  linearExample01fail.con  linearExample02.con  linearExample03if.con  malloc.con  missing_import.con  mutborrow.con  opaque_vec.con  refs.con  simple.con  (+7 more)
grammar/: concrete.ebnf
internal/: index.html  ir.html
lean_tests/: abort_basic.con  alignof_basic.con.ll  alloc_basic.con  alloc_basic.con.ll  alloc_free_loop.con.ll  alloc_propagate.con  alloc_propagate.con.ll  arithmetic.con.ll  array_assign.con  array_assign.con.ll  array_basic.con.ll  bin_oct_literal.con.ll  bitwise_and.con  bitwise_not.con  bitwise_not.con.ll  bitwise_or.con  bitwise_or.con.ll  bitwise_shift.con.ll  bitwise_xor.con.ll  borrow_copy_in_block.con.ll  borrow_in_method.con.ll  borrow_multi.con  borrow_multi.con.ll  borrow_mut.con.ll  borrow_mut_named.con.ll  borrow_named.con  borrow_named.con.ll  borrow_no_consume.con.ll  borrow_read.con  borrow_read.con.ll  borrow_sequential.con  borrow_sequential.con.ll  break_accumulate.con  break_accumulate.con.ll  break_basic.con.ll  break_for.con  break_for.con.ll  bug_array_var_index_assign.con  bug_array_var_index_assign.con.ll  bug_clock_builtin.con  (+555 more)
paper/: README.md  evidence-carrying-short.typ  evidence-carrying.typ  main.typ  refs.bib
proofs/: Examples.lean
research/: README.md  design-filters.md
scripts/: README.md  check_ll1.c  check_ll1.py  check_ll1.rs  env-macos.sh
site/: config.toml
src/: compile_unit_info.rs  grammar.lalrpop  lib.rs  main.rs  repo.sql  repository.rs
std/: .gitattributes  Concrete.toml  README.md
tests/: README.md  checks.rs  common.rs  examples.rs  programs.rs
(+2233 files in other folders)
