[workspace]
resolver = "3"
members = ["lib/concrete-lang-compiler", "lib/concrete-lang-syntactic"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bigdecimal = "0.4.7"
itertools = "0.14.0"
logos = "0.15.0"
num-bigint = "0.4.6"
thiserror = "2.0.11"
tracing = "0.1.41"
