[workspace]
resolver = "3"
members = [
    "lib/concrete-lang-compiler",
    "lib/concrete-lang-syntactic",
    "lib/concrete-lang-syntactic-proc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bigdecimal = "0.4.7"
cfg = "0.9.0"
concrete-lang-syntactic-proc = { path = "lib/concrete-lang-syntactic-proc" }
itertools = "0.14.0"
logos = "0.15.0"
num-bigint = "0.4.6"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = "2.0.99"
thiserror = "2.0.11"
tracing = "0.1.41"
