[package]
name = "concrete"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.41"
itertools = "0.14.0"
thiserror = "2.0.12"
educe = "0.5.11"
lalrpop-util = { version = "0.22.0", features = ["unicode"] }
logos = "0.15.0"
ariadne = { version = "0.5.1", features = ["auto-color"] }
unescaper = "0.1.5"
logos-display = "0.1.3"

melior = { version = "0.24.0", features = ["ods-dialects", "helpers"] }
llvm-sys = "201.0.0"
mlir-sys = "0.5.0"
anyhow = "1.0.95"
git2 = "0.20.1"
owo-colors = "4.1.0"
clap = { version = "4.5.35", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
test-case = "3.3.1"
typed-generational-arena = "0.2.7"

libloading = "0.8"

[build-dependencies]
lalrpop = "0.22.0"

[dev-dependencies]
tempfile = "3.19.1"


[profile.release]
lto = true
codegen-units = 1

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# On dev optimize dependencies a bit so it's not as slow.
[profile.dev.package."*"]
opt-level = 1
