[package]
name = "concrete_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.5.0", features = ["auto-color"] }
concrete_ast = { version = "0.1.0", path = "../concrete_ast" }
concrete_ir = { version = "0.1.0", path = "../concrete_ir" }
concrete_session = { version = "0.1.0", path = "../concrete_session" }
itertools = "0.13.0"
thiserror = "2.0.6"
tracing.workspace = true
