[package]
name = "concrete_codegen_mlir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete_ir = { version = "0.1.0", path = "../concrete_ir" }
concrete_check = { version = "0.1.0", path = "../concrete_check" }
concrete_session = { path = "../concrete_session"}
itertools = "0.12.0"
llvm-sys = "170.0.1"
melior = { version = "0.15.4", features = ["ods-dialects"] }
mlir-sys = "0.2.1"
tracing = { workspace = true }
thiserror = "1.0.57"

[build-dependencies]
cc = "1.0.83"
