[package]
name = "concrete_codegen_mlir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete_ir = { version = "0.1.0", path = "../concrete_ir" }
concrete_check = { version = "0.1.0", path = "../concrete_check" }
concrete_session = { path = "../concrete_session"}
itertools = "0.12.0"
tracing = { workspace = true }
thiserror = "1.0.57"

melior = { version = "0.19.0", features = ["ods-dialects"] }
llvm-sys = "191.0.0"
mlir-sys = "0.3.0"

[build-dependencies]
cc = "1.0.83"
