[package]
name = "concrete_ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete_ast = { version = "0.1.0", path = "../concrete_ast" }
thiserror = "2.0.6"
tracing.workspace = true
educe = "0.5.11"
