[package]
name = "concrete_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["unicode"] }
logos = "0.13.0"
tracing.workspace = true

[build-dependencies]
lalrpop = "0.20.0"
