[package]
name = "concrete_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["unicode"] }
logos = "0.13.0"
tracing = { workspace = true }
concrete_ast = { path = "../concrete_ast"}
salsa = { git = "https://github.com/salsa-rs/salsa.git", package = "salsa-2022" }
ariadne = { version = "0.4.0", features = ["auto-color"] }
itertools = "0.12.0"
unescaper = "0.1.3"

[build-dependencies]
lalrpop = "0.20.0"
