[package]
name = "concrete_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.22.0", features = ["unicode"] }
logos = "0.15.0"
tracing = { workspace = true }
concrete_ast = { path = "../concrete_ast"}
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "c2a6d6238efa5f4642e8f0d2b5097f06b5f46dd0"}
ariadne = { version = "0.5.0", features = ["auto-color"] }
itertools = "0.13.0"
unescaper = "0.1.5"
logos-display = "0.1.3"

[build-dependencies]
lalrpop = "0.22.0"
